<resources>
    <string name="app_name">TYTimeAss</string>
    <string name="action_settings">Settings</string>
    <string name="content_enter">Enter Search Ruery</string>
    <string name="search">Search</string>
    <string name="text_demo">Hello , My name is first article</string>
    <string name="title_activity_article">ArticleActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="begin_date">Begin Date</string>
    <string name="sort">Sort Order</string>
    <string name="arts">Arts</string>
    <string name="sport">Sports</string>
    <string name="fashion"><![CDATA[Fashion & Style]]></string>
    <string name="new_desk">News Desk Values</string>
</resources>
